--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@
 /Функции9_свои модули.py
 /Циклы с enumerate.py
 /Циклы Строки.py
+API2.py
+new.db
+proba.py
+DB1/BD1.py
+DB1/BD2.py
+DB1/BD3.py
+DB1/BD4.py
+DB1/new.db
+DB1/Queryes1.txt
+API2.py
